# hexlet-django-blog

./: Makefile  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: forms.py  models.py  urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py  0002_article_category.py
hexlet_django_blog/categories/: admin.py  forms.py  urls.py  views.py
hexlet_django_blog/categories/migrations/: 0001_initial.py
hexlet_django_blog/templates/: about.html  base.html  form_errors.html  layout.html  navigation.html
hexlet_django_blog/templates/articles/: article.html  create.html  index.html  update.html
hexlet_django_blog/templates/categories/: category.html  create.html  index.html  update.html
