[tool.poetry]
name = "python-django-blog"
version = "0.2.0"
description = "Hexlet Django-training project | Django developing course"
authors = ["Evgeny Sokolov <sokolovsolod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
