[tool.poetry]
name = "python-django-blog"
version = "0.3.0"
description = "Hexlet Django-training project | Django developing course"
authors = ["Evgeny Sokolov <sokolovsolod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"
dj-database-url = "^2.1.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
